# target-db2

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  ci.Dockerfile  docker-compose-ci.yaml  docker-compose.yaml  generate_postgresql_data.py  meltano.yml  mypy.ini  pyproject.toml  wait_for_db2_init.py
.github/workflows/: release.yml  test.yml
libs/python-ibmdbsa-975e254/: CHANGES.md  MANIFEST.in  README.md  run_tests.py  setup.cfg  setup.py
libs/python-ibmdbsa-975e254/ibm_db_sa/: __init__.py  base.py  ibm_db.py  ibm_db_as400.py  pyodbc.py  reflection.py  zxjdbc.py
libs/python-ibmdbsa-975e254/test/: test_out_parameters.py
target_db2/: Db2Sink.py  __init__.py  __main__.py  connector.py  sinks.py  target.py
target_db2/ibm_db_sa/: base.py  ibm_db.py  ibm_db_as400.py  pyodbc.py  reflection.py  requirements.py  zxjdbc.py
tests/: __init__.py  test_core.py  test_custom_types.py
tests/testdata/: __init__.py  schema_change_to_numeric_multipleof.singer  schema_has_numeric_multipleof.singer
